--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <h1>Google Drive Folder Files</h1>
 
-    <label for="sampleUrl">Nhập đường dẫn thư mục Sample:</label>
+    <label for="sampleUrl">Nhập đường dẫn thư mục Design:</label>
     <input type="text" id="sampleUrl" placeholder="Nhập đường dẫn Google Drive folder...">
     <br/>
     <label for="mockupUrl">Nhập đường dẫn thư mục Mockup:</label>
